# pinterest-api-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/oauth-web/: Cargo.toml
examples/oauth-web/src/: main.rs
src/: api.rs  error.rs  lib.rs  oauth.rs  options.rs  parameter.rs  response.rs
src/api/: delete_boards_board_id.rs  delete_boards_board_id_sections_section_id.rs  delete_pins_pin_id.rs  get_boards.rs  get_boards_board_id.rs  get_boards_board_id_pins.rs  get_boards_board_id_sections.rs  get_boards_board_id_sections_section_id_pins.rs  get_media.rs  get_media_media_id.rs  get_pins.rs  get_pins_pin_id.rs  get_pins_pin_id_analytics.rs  get_user_account.rs  patch_boards_board_id.rs  patch_boards_board_id_sections_section_id.rs  patch_pins_pid_id.rs  post_boards.rs  post_boards_board_id_sections.rs  post_media.rs  post_pins.rs  post_pins_pid_id_save.rs
src/parameter/: app_type.rs  carousel_slot.rs  creative_type.rs  media_source.rs  metric_type.rs  pin_filter.rs  pin_type.rs  privacy.rs  privacy_post.rs  split_field.rs
src/response/: analytics.rs  board.rs  board_section.rs  creative_type.rs  images.rs  list_response.rs  media.rs  media_response.rs  media_type.rs  mixed_item.rs  pin.rs  user_account.rs
