[package]
name = "pinterest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
anyhow = "1"
mockito = "1"
tokio = { version = "1", features = ["macros"] }