[package]
name = "pinterest-api"
version = "0.1.1"
edition = "2021"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "Pinterest API library."
repository = "https://github.com/aoyagikouhei/pinterest-api-rs"
keywords = ["pintrest", "api", "client", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/pinterest-api"

[dependencies]
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
anyhow = "1"
mockito = "1"
tokio = { version = "1", features = ["macros"] }